package org.example.individualbackend.business.iml;

import lombok.AllArgsConstructor;
import org.example.individualbackend.business.GetUserUseCase;
import org.example.individualbackend.business.GetUsersUseCase;
import org.example.individualbackend.domain.get.GetAllUsersResponse;
import org.example.individualbackend.persistance.UserRepo;
import org.example.individualbackend.persistance.entity.UserEntity;
import org.springframework.stereotype.Service;

@Service
@AllArgsConstructor
public class GetUserUseCaseImpl implements GetUserUseCase {
    private final UserRepo userRepo;
    @Override
    public UserEntity getUser(Integer id) {
        return userRepo.findById(id);

    }
}
